--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -156,8 +156,8 @@ footer a:hover {
 
 </body>
 
-     <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam_js}}"  ></script> 
-     <script type="text/javascript" crossorigin  src="{% static 'js/fade.js' %}?p={{fileparam_js}}"  ></script> 
+     <script type="text/javascript" crossorigin  src="{% static 'js/umd_main.js' %}?p={{fileparam_js}}" defer></script> 
+     <script type="text/javascript" crossorigin  src="{% static 'js/fade.js' %}?p={{fileparam_js}}"  defer></script> 
      <script type="text/javascript" crossorigin  src="{% static 'js/baseback.js' %}?p={{fileparam_js}}"  ></script> 
 
 </html>
