--- a/basecom/templates/basecom/parts/loading2.html
+++ b/basecom/templates/basecom/parts/loading2.html
@@ -3,7 +3,7 @@
 {% if host == "127.0.0.1:8000" %}
 {% else %}
 <div 
-style="background-color:#555;width:100vw;height:100vh;position:fixed;top:0;left:0;"
+style="background-color:#555;width:100vw;height:100vh;position:fixed;top:0;left:0;background-image:url('/static/bk.svg'),url('/static/bk.svg');background-size:70px 70px,30px 30px;background-position:0 0, 35px 35px"
 class="basefix" id="loading" >
  </div>
 <style>#loading{z-index:99999999 !important;}</style>
