--- a/basecom/templates/basecom/parts/loading2.html
+++ b/basecom/templates/basecom/parts/loading2.html
@@ -3,10 +3,13 @@
 {% if host == "127.0.0.1:8000" %}
 {% else %}
 <div 
-style="background-color:#555;width:100vw;height:100vh;position:fixed;top:0;left:0;background-image:url('/static/bk.svg'),url('/static/bk.svg');background-size:70px 70px,30px 30px;background-position:0 0, 35px 35px"
+style="background-color:#555;background-image:url('/static/bk.svg'),url('/static/bk.svg');background-size:70px 70px,30px 30px;background-position:0 0, 35px 35px"
 class="basefix" id="loading" >
+<div id="opening"></div>
  </div>
-<style>#loading{z-index:99999999 !important;}</style>
+<style>#loading,#opening{
+width:100vw;height:100vh;position:fixed;top:0;left:0;
+z-index:99999999 !important;}</style>
 <script>
 var loading=document.getElementById("loading")
 
@@ -23,3 +26,5 @@ const checkElement = setInterval(() => {
 }, 500);
 </script>
 {% endif %}
+
+     <script type="text/javascript" crossorigin defer src="{% static 'js/opening.js' %}?p={{fileparam_js}}"  ></script> 
