--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 
-<div data-baseurl="" data-picurl="/static/pic" id="RomMain" style="overflow:hidden;text-align:center;opacity:0;">
+<div data-baseurl="" data-picurl="/static/pic" id="mlider" style="overflow:hidden;text-align:center;opacity:0;">
  <a href="https://wordpress.com/ja/"
   data-href="https://wordpress.com/ja/"
   data-title="Wordpress"
@@ -337,6 +337,7 @@ style="transition: opacity 0.8s 0.9s ease-out, transform 0.8s 0.9s ease-out;"
 }
 </style>
 <link rel="stylesheet" href="{% static 'css/home.css' %}?p={{fileparam2}}">
+<script type="text/javascript" crossorigin  src="{% static 'js/mlide.js' %}?p={{fileparam_js}}"  ></script> 
 
 
 {% endblock %}
