--- a/static/css/home.css
+++ b/static/css/home.css
@@ -147,8 +147,9 @@
       background-size: contain;
       background-position: 25% 25%;
       overflow: hidden;
-      transition: transform 0.3s ease;
       z-index: 9;
+      background-size: 100%;
+      transition: background-size 0.3s ease;
       font-size: 1.5em;
       display: inline-block;
       text-decoration: none;
@@ -185,7 +186,7 @@
         right: 0px;
         padding: 0.3em; }
       #rom_urllist2 div.wrapper a.rmlinksimg:hover {
-        transform: scale(1.05) rotate(4deg);
+        background-size: 110%;
         z-index: 10 !important; }
       #rom_urllist2 div.wrapper a.rmlinksimg:visited {
         color: white; }
