--- a/static/css/land2.css
+++ b/static/css/land2.css
@@ -6,10 +6,15 @@
   text-align: left; }
   .land2 .hero1 .button-wrapper {
     text-align: center;
-    margin-bottom: 20px; }
+    margin-bottom: 20px;
+    position: relative;
+    overflow: hidden; }
   .land2 .hero1 .cta-button {
-    display: inline-block;
-    padding: 2px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0px;
     background-color: rgba(220, 220, 220, 0);
     color: white;
     font-size: 36px;
@@ -18,19 +23,25 @@
     position: relative;
     transition: filter 0.3s ease; }
     .land2 .hero1 .cta-button::after {
-      content: "";
-      position: absolute;
-      bottom: -2px;
-      /* 下線の位置調整 */
-      left: 0%;
-      width: 0%;
-      height: 2px;
-      background-color: white;
-      transition: width 0.2s ease-out; }
-  .land2 .hero1 .cta-button:hover {
-    filter: brightness(0.6); }
-    .land2 .hero1 .cta-button:hover::after {
-      width: 100%; }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 0.9em;
+      height: 0.9em;
+      font-size: 0.6em;
+      top: 0.3em;
+      content: "→";
+      color: white;
+      border-radius: 1em;
+      border: solid 3px white;
+      position: relative;
+      right: -1em !important;
+      background-color: rgba(1, 1, 1, 0);
+      transition: opacity 0.3s ease-out;
+      opacity: 0; }
+  .land2 .hero1 .cta-button:hover::after {
+    filter: brightness(10);
+    opacity: 1; }
   @media screen and (min-width: 768px) {
     .land2 .hero1 > h1 {
       margin-top: 150px !important;
