--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -185,8 +185,8 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 
 <div class="land2" style="background-color:rgba(2,2,2,0.4);min-height:100vh">
 <section class="hero1" style="min-height:100vh">
-    <h1 class="element fadeelem"
-data-threshold="0.8"
+    <h1 class="StrEnphOpa"
+        data-baseduration=1500
      >デザインも機能も。あなたの理想を超えるウェブサイトを。</h1> 
     <p  class="element fadeelem"
 data-threshold="0.8"
