--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -115,7 +115,7 @@ footer a:hover {
   opacity: 0.7;
 }
 </style>
-<footer style="opacity:0;" id="rm_footer2" data-sitestring="rom">
+<footer style="position:relative;opacity:0;overflow:hidden;" id="rm_footer2" data-sitestring="rom">
  <a class="StrEnphOpa" data-baseduration="1250" data-basedelay="5" href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
 
 
@@ -133,6 +133,13 @@ footer a:hover {
          style="background-image: url('/static/pic/line_ico.png');"
          href="https://twitter.com/share?url=https://{{host}}{{path}}&text=デモサイト稼働中!"></a>
      </ul>
+     <div
+  style="display:inline-block;line-height:100px;font-size:100px;position:absolute;bottom:-15px;right:70px;opacity:0.2;user-select:none;font-family: 'Playfair Display', serif;letter-spacing: 15px;"
+  
+      >Rommet</div>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
      </footer>
 
 
