--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -134,9 +134,24 @@ footer a:hover {
          href="https://twitter.com/share?url=https://{{host}}{{path}}&text=デモサイト稼働中!"></a>
      </ul>
      <div
-  style="display:inline-block;line-height:100px;font-size:100px;position:absolute;bottom:-15px;right:70px;opacity:0.2;user-select:none;font-family: 'Playfair Display', serif;letter-spacing: 15px;"
-  
+  class="dsnstr"
+  style="display:inline-block;line-height:100px;position:absolute;opacity:0.2;user-select:none;font-family: 'Playfair Display',serif;"
       >Rommet</div>
+<style>
+.dsnstr{
+
+@media screen and (min-width: 768px) {
+font-size:100px;
+right:70px;letter-spacing:15px;bottom:-15px;
+}
+@media screen and (max-width: 768px) {
+font-size:76px;
+right:5px;letter-spacing:5px;bottom:-28px;
+transform:scaleY(1.2);
+}
+
+}
+</style>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
