--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -6,13 +6,17 @@
  style="overflow:hidden"
  data-picurl="/static/pic" id="RomProf2">
 
-<div id="rm_profile_t" style=""></div>
-<div id="rm_profile0">
+<div id="rm_profile_t" style="background-color:rgba(240,240,240,1);"></div>
+
+
+
+<div class="paper" style="align-items: flex-start;padding:0 !important;display:flex;gap:10px;">
+<div id="rm_profile0" style="vertical-align:top;align-items: center;justify-content: center; ">
  <div>
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >代表：Rom</span>
  </div>
  <div>
-  <span  data-basedelay="400" class="StrEnphOpa rmlinktitle" >屋号 : Rommet Company</span>
+  <span  data-basedelay="400" class="StrEnphOpa rmlinktitle" >屋号 : Rommet</span>
  </div>
  <div>
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >従業員 : 1人</span>
@@ -26,13 +30,9 @@
  <a href="https://www.lancers.jp/profile/yoshihon?ref=header_menu">
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >連絡先 : ランサーズ</span>
  </a>
- <div>
-  <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >メールアドレス: ☆☆</span>
- </div>
 </div>
-
-<div id="rm_profile" style=""></div>
-
+<div id="rm_profile" style="align-items: center;justify-content: center "></div>
+</div>
 
 
 
