--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -10,7 +10,7 @@
 
 
 
-<div class="paper" style="align-items: flex-start;padding:0 !important;display:flex;gap:10px;">
+<div class="paper" style="">
 <div id="rm_profile0" style="vertical-align:top;align-items: center;justify-content: center; ">
  <div>
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >代表：Rom</span>
@@ -33,12 +33,64 @@
 </div>
 <div id="rm_profile" style="align-items: center;justify-content: center "></div>
 </div>
-
-
-
-
-
 </div>
+
+<br>
+<style>
+</style>
+<div id="keireki"><div style="width:82vw;background-color:white;align-items:flex-start;display:flex;">
+  <div class="introduce">
+    <h1>rom</h1>
+    <p><strong>職種:</strong> フルスタックエンジニア</p>
+
+<h2>Introduce</h2>
+<p>大学卒業後、フリーランスとして実務経験を積んだフルスタックエンジニア。
+フロントエンドからバックエンドまで一貫して開発でき、特にDjangoとJavaScriptを用いた
+ウェブアプリ開発が得意。ReactやNode.jsを用いたプロジェクトに多数受け持ち、
+最新技術を取り入れながらサービス開発に取り組んでいる。</p>
+
+    <h2>Skill Set</h2>
+    <ul>
+        <li><strong>プログラミング言語:</strong> JavaScript(React, Node.js), TypeScript, Python, PHP</li>
+        <li><strong>フレームワーク・CMS:</strong> React, Django, WordPress</li>
+        <li><strong>データベース:</strong> MySQL, SQLite</li>
+        <li><strong>ツール:</strong> Git, Vite, Sass</li>
+        <li><strong>開発手法:</strong> アジャイル開発</li>
+    </ul>
+
+<h2>History</h2>
+
+<h3>Independent Development</h3>
+
+<h4>ブログ & ポートフォリオサイト</h4>
+<ul>
+    <li>Djangoを用いたポートフォリオサイト。ブログ・コメント機能も搭載</li>
+</ul>
+<h4>Flluterを用いた音楽ファイル再生アプリ</h4>
+<ul>
+    <li>広告なし、リピート機能付き、バックグラウンド再生も可能</li>
+</ul>
+
+<h3>Client Project</h3>
+
+<h4>ショッピングサイト在庫管理ツール</h4>
+<ul>
+    <li>Djangoで制作したショッピングサイトの在庫管理ツールです。</li>
+    <li>Pythonを用いて制作したクライアントソフトを用いて、在庫数を更新する仕様になっております。</li>
+</ul>
+
+
+    <h2>Education</h2>
+    <p><strong>情報学部</strong> 4年制大学 卒業</p>
+    </div>
+ </div></div>
+<style>
+#keireki{
+display:flex;justify-content:center;align-items:center;
+ min-height:10vh;
+
+}
+</style>
 
 <link rel="stylesheet" href="{% static 'css/prof.css' %}?p={{fileparam}}">
 
