--- a/static/css/comments.css
+++ b/static/css/comments.css
@@ -1,6 +1,10 @@
 div#rm_comments {
   text-align: center;
   margin-bottom: 5vh; }
+  div#rm_comments h3 {
+    font-size: 1.3em;
+    display: inline-block;
+    color: #323232; }
   div#rm_comments .cmtblck {
     position: relative; }
     div#rm_comments .cmtblck label {
@@ -11,7 +15,7 @@ div#rm_comments {
       transition: all 0.3s ease; }
     div#rm_comments .cmtblck input, div#rm_comments .cmtblck textarea {
       box-sizing: border-box;
-      width: 100%;
+      width: 90%;
       padding: 10px 10px 10px 35px;
       font-size: 16px;
       border: 2px solid #0078ff;
@@ -52,11 +56,12 @@ div#rm_comments {
   div#rm_comments div#forms {
     text-align: center; }
     div#rm_comments div#forms div.cmtblck {
+      box-sizing: border-box;
       padding-top: 2em;
       display: inline-block; }
       @media screen and (max-width: 600px) {
         div#rm_comments div#forms div.cmtblck {
-          width: 90%; } }
+          width: 90vw; } }
       @media screen and (min-width: 600px) {
         div#rm_comments div#forms div.cmtblck {
           width: 50%; } }
@@ -92,11 +97,5 @@ div#rm_comments {
     box-shadow: 3px 3px 2px 1px rgba(200, 200, 255, 0.5);
     display: inline-block;
     box-sizing: border-box; }
-    @media screen and (max-width: 600px) {
-      div#rm_comments > div#forms {
-        width: 100vw; } }
-    @media screen and (min-width: 600px) {
-      div#rm_comments > div#forms {
-        width: 55vw; } }
 
 /*# sourceMappingURL=comments.css.map */
