--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -116,7 +116,7 @@ footer a:hover {
 }
 </style>
 <footer style="position:relative;opacity:0;overflow:hidden;" id="rm_footer2" data-sitestring="rom">
- <a class="StrEnphOpa" data-baseduration="1250" data-basedelay="5" href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
+ <a class="copyright StrEnphOpa" data-baseduration="1250" data-basedelay="5" href="/">Copyright © rom 2024-2025 All Rights Reserved.</a>
 
 
      <ul id="rm_linklist">
@@ -170,7 +170,6 @@ transform:scaleY(1.2);
       width: 100vw;
       height: 100%;
       z-index: -1;
-
     }
 </style>
 
