--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -180,10 +180,13 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 
 
 <div class="land2" style="min-height:100vh">
-<section class="hero1" style="min-height:100vh">
+<section class="hero1" style="text-align:center;min-height:100vh;">
 {% include 'basecom/parts/slider.html' with y="-30" deg="-2" id="abc" %}
 
- <div class="toptext" style="padding-bottom:50px;padding-top:50px;border-radius:10px;">
+
+ <div class="toptext" style="
+             display:inline-block;text-align:left;
+  padding-bottom:50px;padding-top:50px;border-radius:10px;">
     <h1 class="StrEnphOpa"
         data-baseduration=1500
      >デザインも機能も。あなたの理想を超えるウェブサイトを。</h1> 
@@ -210,6 +213,9 @@ style="transition: opacity 0.8s 0.6s ease-out, transform 0.8s 0.2s ease-out;">
     <p>フロントからバックエンドまで、全てを一貫してサポート。スムーズな開発と迅速な問題解決を提供します。</p>
   </div>
 </div>
+
+
+
 <div class="button-wrapper">
  <a href="/contact.html" class="cta-button">Contact </a>
 </div>
