--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -179,9 +179,9 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 </script>
 
 
-<div class="land2" style="min-height:100vh">
-<section class="hero1" style="text-align:center;min-height:100vh;">
 {% include 'basecom/parts/slider.html' with y="-30" deg="-2" id="abc" %}
+<div class="land2" style="min-height:100vh;">
+<section class="hero1" style="text-align:center;min-height:100vh;">
 
 
  <div class="toptext" style="
@@ -215,9 +215,29 @@ style="transition: opacity 0.8s 0.6s ease-out, transform 0.8s 0.2s ease-out;">
 </div>
 
 
+<div class="wrapper-wrpper" style="box-sizing:border-box;;height:200px;overflow:hidden;">
+<div class="button-wrapper" style=" 
 
-<div class="button-wrapper">
- <a href="/contact.html" class="cta-button">Contact </a>
+ transform:rotate(1deg) translateY(100px);
+ overflow-x:hidden !important;
+background-color:rgba(10,10,10) !important;
+white-space:nowrap;
+width:110vw;
+position:relateve;
+left:-5vw;
+
+
+ ">
+ <a href="/contact.html" class="cta-button" style="
+display:inline-block;
+width:10vw;position:relative;left:-15vw;
+ transform:rotate(-1deg) translate(0%,0.0em);
+position:relateve;
+left:-5vw;
+      white-space: nowrap;
+
+  ">Contact →</a>
+</div>
 </div>
 
 <link rel="stylesheet" href="{% static 'css/land2.css' %}?p={{fileparam2}}">
