--- a/basecom/templates/basecom/urllist.html
+++ b/basecom/templates/basecom/urllist.html
@@ -72,6 +72,8 @@ src="{{p.post_pic|default:"/static/pic/nophoto.jpg"}}"/>
       display: grid;
       border-top:10px solid #333;
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      background-image:url("/static/graphic/tile.png");
+      background-size:cover;
       gap: 5px;
       @media screen and (max-width: 768px) {
       padding:150px 10px;
