--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -70,7 +70,7 @@ z-index:100;
 
  </style>
 <div class="rmset pc element fadeelem"
-     style="
+     style="transition:opacity 0.5s ease;
 color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 >
 <div style="color:red;width:100%;height:300px;background-color:white">
@@ -149,7 +149,9 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
  <a 
   class="rmlinksimg elem2 fadeelem"
   data-threshold="0"
-  style="background-image:url('{{p.post_pic|default:"/static/pic/nophoto.jpg"}}')"
+  style="
+transition:opacity 0.5s ease;
+  background-image:url('{{p.post_pic|default:"/static/pic/nophoto.jpg"}}')"
   data-urlname="/post/{{p.url_name}}.html" data-titlename="{{ p.post_title }}" data-created_at="{{p.created_at | date:"Y/m/d"}}" href="/post/{{p.url_name}}.html">
   <div class="rmlinkdate">{{p.created_at | date:"Y/m/d"}} </div>
   <span class="StrEnphOpa rmlinktitle" >{{ p.post_title }}</span>
