--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -182,13 +182,33 @@ transition:opacity 0.5s ease;
 
 
 {% include 'basecom/parts/slider.html' with y="-30" deg="-2" id="abc" %}
-<div class="land2" style="min-height:100vh;">
+<div class="land2" style="min-height:100vh;position:relative;
+ overflow:hidden">
+<div style="
+clip-path: polygon(
+  96% 2%, 93% 33%, 96% 65%, 98% 78%, 96% 92%,
+  82% 100%, 62% 93%, 31% 98%, 11% 99%, 2% 92%,
+  3% 71%, 3% 56%, 5% 35%, 9% 24%, 4% 18%,
+  3% 11%, 13% 7%, 21% 1%, 52% 4%, 76% 4%, 79% 0%
+);
+filter:blur(2px) brightness(50%);
+opacity:0.8;
+background-image: url('/static/graphic/wood.png');
+background-repeat: repeat;
+ width:100%;height:100%;position:absolute;"></div>
 <section class="hero1" style="text-align:center;min-height:100vh;">
 
 
- <div class="toptext" style="
+<style>.namepin{
+position:absolute;right:8px;top:8px;
+background-color:red;width:15px;height:15px;border-radius:20px;
+border:1px rgba(255,200,200,1) solid;
+background: radial-gradient(circle at 30% 30%, #ffffff88, #ffffff00 40%),radial-gradient(circle at center, #e74c3c, #c0392b);
+}</style>
+ <div class="toptext" style="position:relative;
              display:inline-block;text-align:left;
   padding-bottom:50px;padding-top:50px;border-radius:10px;">
+  <div class="namepin"></div>
     <h1 class="StrEnphOpa"
         data-baseduration=1500
      >デザインも機能も。あなたの理想を超えるウェブサイトを。</h1> 
@@ -197,20 +217,24 @@ data-threshold="0.8"
     >フロントエンドからバックエンドまで、プロフェッショナルが一貫対応！</p>
     </div>
 
+
 <div class="container_1a2b3c">
   <div class="box_rom element fadeelem" data-threshold="0.8"
-style="transition: opacity 0.8s 0.6s ease-out, transform 0.8s 0.2s ease-out;">
+style="position:relative;transition: opacity 0.8s 0.6s ease-out, transform 0.8s 0.2s ease-out;">
+  <div class="namepin"></div>
     <h2>デザイン勝負・ビジュアルが全て</h2>
     <p>フロントエンドは、ユーザー体験を最優先。美しいデザインで、訪れる人の心を掴むサイトを作ります。</p>
   </div>
   <div class="box_rom element fadeelem" data-threshold="0.8"
-       style="transition: opacity 0.8s 0.8s ease-out, transform 0.8s 0.2s ease-out;"  >
+       style="position:relative;transition: opacity 0.8s 0.8s ease-out, transform 0.8s 0.2s ease-out;"  >
+  <div class="namepin"></div>
     <h2>機能性を徹底追求</h2>
     <p>バックエンドは、ビジネスの根幹を支える重要な部分。信頼性、パフォーマンス、セキュリティを最大限に重視します。</p>
   </div>
   <div class="box_rom element fadeelem"
      data-threshold="0.8"
-     style="transition: opacity 0.8s 1.2s ease-out, transform 0.8s 0.2s ease-out;" >
+     style="position:relative;transition: opacity 0.8s 1.2s ease-out, transform 0.8s 0.2s ease-out;" >
+  <div class="namepin"></div>
     <h2>一貫したプロフェッショナル対応</h2>
     <p>フロントからバックエンドまで、全てを一貫してサポート。スムーズな開発と迅速な問題解決を提供します。</p>
   </div>
@@ -254,12 +278,17 @@ white-space: nowrap;
   </section>
 
 <section class="hero3" style="min-height:100vh">
-<div class="container">
+<div class="container" style="">
+
+
+
+ <div style="position:relative;z-index:10">
  <h1 class="section-title" style="white-space:nowrap;color:white;">Webサイト制作<br>の流れ</h1>
-        <div class="card-grid">
+ </div>
+   <div class="card-grid">
             <div class="card elem2 fadeelem"
 style="transition: opacity 0.8s 0.4s ease-out, transform 0.8s 0.4s ease-out;"
-             >
+>
                 <img src="{% static 'pic/hearing.jpg' %}" >
                 <h3>1: ヒアリング</h3>
                 <p>お客様のご要望や目的をしっかりとお伺いします。</p>
