--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -188,7 +188,7 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
   class="rmlinksimg elem2 fadeelem"
   data-threshold="0"
   style="
-transition:opacity 0.5s ease;
+transition: opacity 0.5s ease, background-size 0.3s ease;
   background-image:url('{{p.post_pic|default:"/static/pic/nophoto.jpg"}}')"
   data-urlname="/post/{{p.url_name}}.html" data-titlename="{{ p.post_title }}" data-created_at="{{p.created_at | date:"Y/m/d"}}" href="/post/{{p.url_name}}.html">
   <div class="rmlinkdate">{{p.created_at | date:"Y/m/d"}} </div>
