--- a/basecom/templates/basecom/urllist.html
+++ b/basecom/templates/basecom/urllist.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 
-<div class="rm_realurllist" style="opacity:0">
+<div class="rm_realurllist" style="opacity:0;display: grid;">
 
  <div class="grid" >
   <div style="position:absolute;top:10px;font-size:36px;">活動紹介</div>
