--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -220,9 +220,34 @@ transition: opacity 0.5s ease, background-size 0.3s ease;
 
 
 {% include 'basecom/parts/slider.html' with y="-30" deg="-2" id="abc" %}
+<style>
+@media screen and (max-width: 768px) {
+.wooddsn{
+
+width:106%;
+left:-3%;
+}
+}
+
+@media screen and (min-width: 769px) {
+.wooddsn{
+width:100%;
+left:0px;
+
+}
+}
+
+
+
+
+
+
+</style>
 <div class="land2" style="min-height:100vh;position:relative;
  overflow:hidden">
-<div style="
+<div 
+class="wooddsn"
+style="
 clip-path: polygon(
   96% 2%, 93% 33%, 96% 65%, 98% 78%, 96% 92%,
   82% 100%, 62% 93%, 31% 98%, 11% 99%, 2% 92%,
@@ -233,7 +258,7 @@ filter:blur(2px) brightness(50%);
 opacity:0.8;
 background-image: url('/static/graphic/wood.png');
 background-repeat: repeat;
- width:100%;height:100%;position:absolute;"></div>
+ height:100%;position:absolute;"></div>
 <section class="hero1" style="text-align:center;min-height:100vh;">
 
 
