--- a/basecom/templates/basecom/post2.html
+++ b/basecom/templates/basecom/post2.html
@@ -34,7 +34,7 @@
   <a class="rmicon" href="https://twitter.com/home" ><img src="{% static 'pic/twitter_btn.png' %}"></a>
   <a class="rmicon" href="https://b.hatena.ne.jp/"><img src="{% static 'pic/hatena_btn.png' %}"></a>
  </div>
-<div id="rom_content_title" style="text-align:left;" class="articleheader__title"> {{content.post_title}}</div>
+<div id="rom_content_title" style="color:rgba(250,250,250,1);text-align:left;" class="articleheader__title"> {{content.post_title}}</div>
 </div>
 
 <style>
@@ -55,9 +55,9 @@ letter-spacing:0.05em !important;
 padding:10px 0px 10px 10px !important;
 
 animation: dimGlow 6s ease-in-out infinite;
+}
 
-
-
+div.attention{
 }
 
 
