--- a/basecom/templates/basecom/urllist.html
+++ b/basecom/templates/basecom/urllist.html
@@ -4,8 +4,7 @@
 
 
 <div class="rm_realurllist" style="opacity:0;display: grid;">
-
- <div class="grid" >
+ <div class="grid" style="max-width:85vw">
   <div style="position:absolute;top:10px;font-size:36px;">活動紹介</div>
  {% for p in posted %}
 
@@ -124,7 +123,7 @@ src="{{p.post_pic|default:"/static/pic/nophoto.jpg"}}"/>
       color: #fff;
       text-align: center;
       //transition: all 0.3s ease;
-      opacity: 0;
+      //opacity: 0;
 
       transform: translate(0, 0);
       transition: transform 0.6s ease-out, opacity 0.6s ease-out;
@@ -167,7 +166,6 @@ height:200px;width:180px;
             card.style.transform = `translate(${dx}px, ${dy}px)`;
           });
 
-          // トリガー後少し遅れてディール風に順番に配る
           cards.forEach((card, index) => {
             setTimeout(() => {
               card.classList.add('show');
