--- a/demosite/templates/demosite/demo1.html
+++ b/demosite/templates/demosite/demo1.html
@@ -176,7 +176,7 @@ section h2::after {
 
 .logo span {
   font-weight: bold;
-  color: #a1897a; /* アース系のナチュラルカラー */
+  color: #a1897a; 
 }
 
 
@@ -206,7 +206,7 @@ section h2::after {
       left: 0;
       width: 0;
       height: 2px;
-      background: #d59ca4; /* ピンクベージュ系で美容院っぽく */
+      background: #d59ca4; 
       transition: width 0.3s ease;
     }
 
@@ -366,7 +366,7 @@ section h2::after {
 
 .card strong {
   display: block;
-  margin-top: 3em; /* 画像との距離をあける（画像が絶対配置なら必要） */
+  margin-top: 3em; 
   font-size: 1.2em;
   font-weight: bold;
 }
