--- a/demosite/templates/demosite/demo1.html
+++ b/demosite/templates/demosite/demo1.html
@@ -53,7 +53,7 @@ html{
       .nav.show {
         display: flex;
         transform:translateY(0%);
-        pointer-events:default !important;
+        pointer-events:auto !important;
         
       }
 
