--- a/static/css/articles.css
+++ b/static/css/articles.css
@@ -211,10 +211,18 @@ a {
     box-sizing: border-box; }
 
 div.rmmidasi1 {
+  font-size: 1.1em;
   background-color: black;
   color: white;
   border-radius: 4px;
   padding: 0.5em 1.5em 0.5em 1.5em; }
+
+div.rmmidasi2 {
+  font-size: 0.9em;
+  border-radius: 4px;
+  background-color: #222;
+  color: #f2f2f2;
+  padding: 0.1em 0.3em 0.1em 0.3em; }
 
 div.attention {
   border-radius: 4px;
