--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="ja">
     <head>
-     <title id="navTitle" data-title="">rommet {{subtitle}}</title>
+     <title id="navTitle" data-title="">〜関西のすみっこで、Web作り〜 rommet {{subtitle}}</title>
 <meta http-equiv="Content-Type" content="text/html;" charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
      <link rel="stylesheet" href="{% static 'css/style.css' %}?p={{fileparam2}}">
