--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -10,6 +10,17 @@
 <link href='https://fonts.googleapis.com/css?family=Dela Gothic One' rel='stylesheet' type='text/css'>
 <link rel="icon" href="{% static 'favicon.png' %}">
     </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ETE0BWJ8C0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ETE0BWJ8C0');
+</script>
+
 <body >
 <style>
 body{
