--- a/basecom/templates/basecom/profile.html
+++ b/basecom/templates/basecom/profile.html
@@ -6,7 +6,7 @@
  style="overflow:hidden"
  data-picurl="/static/pic" id="RomProf2">
 
-<div id="rm_profile_t" style="background-color:rgba(240,240,240,1);"></div>
+<div id="rm_profile_t" style="background-image:url('{% static 'graphic/title_log.png' %}') !important;background-color:rgba(240,240,240,1);"></div>
 
 
 
@@ -31,7 +31,7 @@
   <span data-basedelay="400" class="StrEnphOpa rmlinktitle" >連絡先 : ランサーズ</span>
  </a>
 </div>
-<div id="rm_profile" style="align-items: center;justify-content: center "></div>
+<div id="rm_profile" style="background-size:95% 95%;background-image:url('{% static 'graphic/title_log.png' %}') !important;align-items: center;justify-content: center "></div>
 </div>
 </div>
 
