--- a/basecom/templates/basecom/base.html
+++ b/basecom/templates/basecom/base.html
@@ -143,7 +143,7 @@ footer a:hover {
 
       <a 
          style="background-image: url('/static/pic/line_ico.png');"
-         href="https://twitter.com/share?url=https://{{host}}{{path}}&text=デモサイト稼働中!"></a>
+         href="https://line.me/R/ti/p/@784ilcfc?ts=05310413&oat_content=url"></a>
      </ul>
      <div
   class="dsnstr"
