--- a/basecom/templates/basecom/home.html
+++ b/basecom/templates/basecom/home.html
@@ -114,17 +114,10 @@ color:white;font-size:1.2em;white-space:normal;overflow:hidden;"
 <div style="color:red;width:100%;height:300px;background-color:white">
 
 
-<div class="web-design" style="width: 100%; height: 100%; position: relative; background-color: #F3F4F6;">
-  <div class="left-section" style="width: 45%; height: 100%; background-color: #D0D8E1; position: absolute; top: 0; left: 0; border-radius: 12px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);"></div>
-
-  <div class="center-section" style="width: 45%; height: 100%; background-color: #FFFFFF; position: absolute; top: 0; left: 55%; border-radius: 12px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);"></div>
-
-  <div class="right-section" style="width: 10%; height: 100%; background-color: #E1E8ED; position: absolute; top: 0; left: 90%; border-radius: 12px;"></div>
-
-  <div class="top-banner" style="width: 100%; height: 50px; background-color: #8C9BA8; position: absolute; top: 0; left: 0; border-top-left-radius: 12px; border-top-right-radius: 12px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);"></div>
-
-  <div class="bottom-banner" style="width: 100%; height: 50px; background-color: #8C9BA8; position: absolute; bottom: 0; left: 0; border-bottom-left-radius: 12px; border-bottom-right-radius: 12px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);"></div>
+<div class="web-design" style="background-image:url('{% static 'graphic/title_log.png' %}') !important;background-size:contain;background-repeat:no-repeat;background-position: center center;background-color:rgba(200,150,150,0.5);border-radius:5px;
+ width: 100%; height: 100%; position: relative;">
 </div>
+
 </div>
 <span style="white-space:normal;display:block;overflow-wrap:break-word;word-wrap:break-word;
              color:rgba(100,100,100,1);
